[package]
name = "variables"
version = "0.1.0"
authors = ["Taylor Parrish <twpearish@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Way to import libs into project
# [lib]
# name = "restaurant"
# path = "restaurant/src/lib.rs"